<resources>
    <string name="app_name">VKU student market</string>
    <string name="labelLsCategories">Tất cả danh mục</string>
    <string name="lblHome">Trang chủ</string>
    <string name="lblSearch">Tìm kiếm</string>
    <string name="lblNotify">Thông báo</string>
    <string name="lblPersional">Cá nhân</string>
    <string name="lblCart">Giỏ hàng</string>
    <string name="lblProfile">Quản lý tài khoản</string>
    <string name="lblPost">Đăng tin</string>
    <string name="t_kh_a_hot">Từ khóa hot</string>
    <string name="lblDelete">Xóa</string>
    <string name="more">more_hoz</string>
    <string name="ch_n_mua">Chọn Mua</string>
    <string name="ng_nh_p_ng_k">Đăng Nhập/Đăng ký</string>
    <string name="ch_o_m_ng_b_n_n_v_i_sm_vku">Chào mừng bạn đến với SM-VKU</string>
    <string name="m_i">Mới</string>
    <string name="th_nh_ti_n">Thành tiền</string>
    <string name="ti_n_h_nh_t_h_ng">Tiến hành đặt hàng</string>
    <string name="t_m_t_nh">Tạm tính</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ti_p_t_c_mua_h_ng">Tiếp tục mua hàng</string>
    <string name="email_s_i_n_tho_i">Email/Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="ng_k">Đăng ký</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="h_t_n">Họ tên</string>
    <string name="toi_ban">Tôi bán</string>
    <string name="id">#__id: </string>
    <string name="lblLogout">Đăng xuất</string>
    <string name="post">Đăng tin</string>
    <string name="manage_post">Quản lý tin đăng</string>
    <string name="ch_p_nhi_u_h_nh_nh_p_b_n_ch_y_h_n">Chụp nhiều hình ảnh đẹp để bán chạy hơn</string>
    <string name="th_m_chi_ti_t_s_n_ph_m_b_n_ch_y_h_n">Thêm chi tiết sản phẩm(Để bán chạy hơn)</string>
    <string name="t_n_s_n_ph_m">Tên sản phẩm</string>
    <string name="gi">Giá</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="email">Email</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="so_n_tin_nh_n">Soạn tin nhắn...</string>
    <string name="bi_tu_choi">Bị từ chối</string>
    <string name="dang_ban">Đang bán</string>
    <string name="can_thanh_toan">Cần thanh toán</string>
    <string name="detail_description">Mô tả chi tiết</string>
    <string name="update">Cập nhập</string>
    <string name="edit_post">Chỉnh sửa bài đăng</string>
    <string name="messenger">Messenger</string>
</resources>
