<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/lblSearch"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/lblHome"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_shopping_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/lblCart"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more_horiz"
        android:title="@string/more"
        app:showAsAction="always"/>

</menu>