<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin15dp"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="2dp"
        android:layout_marginVertical="5dp">
        <EditText
            android:id="@+id/post_email"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:hint="@string/email"
            android:textColor="@android:color/primary_text_light"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:padding="2dp"
        android:layout_marginVertical="5dp">
        <EditText
            android:id="@+id/post_phone"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="20sp"
            android:hint="@string/s_i_n_tho_i"
            android:textColor="@android:color/primary_text_light"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:text="@string/ti_p_t_c"
        android:textColor="@color/white"
        android:background="@drawable/round_corner"
        android:backgroundTint="#F30F0F"/>
</LinearLayout>