<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin15dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/username"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:hint="@string/email_s_i_n_tho_i"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/password"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="@string/password"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30dp"
            android:inputType="text|textCapSentences"
            android:text="@string/ng_nh_p"
            android:textColor="@color/white"
            android:background="@drawable/round_corner"
            android:backgroundTint="#F30F0F"/>
    </LinearLayout>
</ScrollView>