<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin15dp"
        android:paddingBottom="@dimen/padding0dp"
        android:scrollbars="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/username"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapSentences"
                android:textSize="18sp"
                android:hint="@string/h_t_n"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/numberPhone"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="18sp"
                android:hint="@string/s_i_n_tho_i"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/email"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:hint="@string/email"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="2dp"
            android:layout_marginVertical="5dp">
            <EditText
                android:id="@+id/password"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:hint="@string/password"
                android:textColor="@android:color/primary_text_light"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp">

            <RadioButton
                android:id="@+id/radioButton_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/radioButton_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Famale"
                android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30dp"
            android:inputType="text|textCapSentences"
            android:text="@string/ng_k"
            android:textColor="@color/white"
            android:background="@drawable/round_corner"
            android:backgroundTint="#F30F0F"/>
    </LinearLayout>
</ScrollView>