<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.EditPostActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/edit_post_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin15dp"
            android:orientation="vertical">
            <FrameLayout
                android:id="@+id/frame_capture_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:layout_marginVertical="5dp">
                <EditText
                    android:id="@+id/productName"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:textSize="20sp"
                    android:hint="@string/t_n_s_n_ph_m"
                    android:textColor="@android:color/primary_text_light"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin15dp"/>
            <Spinner
                android:id="@+id/spinner_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:layout_marginVertical="5dp">
                <EditText
                    android:id="@+id/productPrice"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/gi"
                    android:textColor="@android:color/primary_text_light"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:layout_marginVertical="5dp">
                <EditText
                    android:id="@+id/productDetail"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:focusable="false"
                    android:hint="@string/th_m_chi_ti_t_s_n_ph_m_b_n_ch_y_h_n"
                    android:textColor="@android:color/primary_text_light"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:layout_marginVertical="5dp">
                <EditText
                    android:id="@+id/post_email"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:hint="@string/email"
                    android:textColor="@android:color/primary_text_light"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:padding="2dp"
                android:layout_marginVertical="5dp">
                <EditText
                    android:id="@+id/post_phone"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/s_i_n_tho_i"
                    android:textColor="@android:color/primary_text_light"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding20dp"
                android:inputType="text|textCapSentences"
                android:text="@string/update"
                android:textColor="@color/white"
                android:background="@drawable/round_corner"
                android:backgroundTint="#F30F0F"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>